test/cli/commands/smoke-test/test-data/vpc-stack/CdkDiffNoNat.json
[
  {
    "stackName": "SmokeTestApp",
    "format": "aws-cdk",
    "changeType": "CREATE",
    "resourceType": "AWS::EC2::VPC",
    "resourceRecord": {
      "address": "Vpc/Vpc",
      "type": "AWS::EC2::VPC",
      "logicalId": "VpcC3027511",
      "properties": {
        "CidrBlock": "10.40.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "SmokeTestApp/Vpc/Vpc"
          }
        ]
      }
    }
  },
  {
    "stackName": "SmokeTestApp",
    "format": "aws-cdk",
    "changeType": "CREATE",
    "resourceType": "AWS::EC2::Subnet",
    "resourceRecord": {
      "address": "Vpc/Vpc/PublicSubnetSubnet1/Subnet",
      "type": "AWS::EC2::Subnet",
      "logicalId": "VpcPublicSubnetSubnet1SubnetCE01ADA6",
      "properties": {
        "VpcId": {
          "Ref": "VpcC3027511"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.40.0.0/19",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "PublicSubnet"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "SmokeTestApp/Vpc/Vpc/PublicSubnetSubnet1"
          }
        ]
      }
    }
  },
  {
    "stackName": "SmokeTestApp",
    "format": "aws-cdk",
    "changeType": "CREATE",
    "resourceType": "AWS::EC2::RouteTable",
    "resourceRecord": {
      "address": "Vpc/Vpc/PublicSubnetSubnet1/RouteTable",
      "type": "AWS::EC2::RouteTable",
      "logicalId": "VpcPublicSubnetSubnet1RouteTableD16E6674",
      "properties": {
        "VpcId": {
          "Ref": "VpcC3027511"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "SmokeTestApp/Vpc/Vpc/PublicSubnetSubnet1"
          }
        ]
      }
    }
  },
  {
    "stackName": "SmokeTestApp",
    "format": "aws-cdk",
    "changeType": "CREATE",
    "resourceType": "AWS::EC2::SubnetRouteTableAssociation",
    "resourceRecord": {
      "address": "Vpc/Vpc/PublicSubnetSubnet1/RouteTableAssociation",
      "type": "AWS::EC2::SubnetRouteTableAssociation",
      "logicalId": "VpcPublicSubnetSubnet1RouteTableAssociationAF3B2E14",
      "properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnetSubnet1RouteTableD16E6674"
        },
        "SubnetId": {
          "Ref": "VpcPublicSubnetSubnet1SubnetCE01ADA6"
        }
      }
    }
  },
  {
    "stackName": "SmokeTestApp",
    "format": "aws-cdk",
    "changeType": "CREATE",
    "resourceType": "AWS::EC2::Route",
    "resourceRecord": {
      "address": "Vpc/Vpc/PublicSubnetSubnet1/DefaultRoute",
      "type": "AWS::EC2::Route",
      "logicalId": "VpcPublicSubnetSubnet1DefaultRoute0E1DFC20",
      "properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnetSubnet1RouteTableD16E6674"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIGW488B0FEB"
        }
      }
    }
  },
  {
    "stackName": "SmokeTestApp",
    "format": "aws-cdk",
    "changeType": "CREATE",
    "resourceType": "AWS::EC2::Subnet",
    "resourceRecord": {
      "address": "Vpc/Vpc/PublicSubnetSubnet2/Subnet",
      "type": "AWS::EC2::Subnet",
      "logicalId": "VpcPublicSubnetSubnet2Subnet1C0D5211",
      "properties": {
        "VpcId": {
          "Ref": "VpcC3027511"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.40.32.0/19",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "PublicSubnet"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "SmokeTestApp/Vpc/Vpc/PublicSubnetSubnet2"
          }
        ]
      }
    }
  },
  {
    "stackName": "SmokeTestApp",
    "format": "aws-cdk",
    "changeType": "CREATE",
    "resourceType": "AWS::EC2::RouteTable",
    "resourceRecord": {
      "address": "Vpc/Vpc/PublicSubnetSubnet2/RouteTable",
      "type": "AWS::EC2::RouteTable",
      "logicalId": "VpcPublicSubnetSubnet2RouteTableD12B2355",
      "properties": {
        "VpcId": {
          "Ref": "VpcC3027511"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "SmokeTestApp/Vpc/Vpc/PublicSubnetSubnet2"
          }
        ]
      }
    }
  },
  {
    "stackName": "SmokeTestApp",
    "format": "aws-cdk",
    "changeType": "CREATE",
    "resourceType": "AWS::EC2::SubnetRouteTableAssociation",
    "resourceRecord": {
      "address": "Vpc/Vpc/PublicSubnetSubnet2/RouteTableAssociation",
      "type": "AWS::EC2::SubnetRouteTableAssociation",
      "logicalId": "VpcPublicSubnetSubnet2RouteTableAssociation31AD1654",
      "properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnetSubnet2RouteTableD12B2355"
        },
        "SubnetId": {
          "Ref": "VpcPublicSubnetSubnet2Subnet1C0D5211"
        }
      }
    }
  },
  {
    "stackName": "SmokeTestApp",
    "format": "aws-cdk",
    "changeType": "CREATE",
    "resourceType": "AWS::EC2::Route",
    "resourceRecord": {
      "address": "Vpc/Vpc/PublicSubnetSubnet2/DefaultRoute",
      "type": "AWS::EC2::Route",
      "logicalId": "VpcPublicSubnetSubnet2DefaultRoute902DF4E4",
      "properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnetSubnet2RouteTableD12B2355"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIGW488B0FEB"
        }
      }
    }
  },
  {
    "stackName": "SmokeTestApp",
    "format": "aws-cdk",
    "changeType": "CREATE",
    "resourceType": "AWS::EC2::Subnet",
    "resourceRecord": {
      "address": "Vpc/Vpc/IsolatedSubnetSubnet1/Subnet",
      "type": "AWS::EC2::Subnet",
      "logicalId": "VpcIsolatedSubnetSubnet1Subnet9413A915",
      "properties": {
        "VpcId": {
          "Ref": "VpcC3027511"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.40.64.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "IsolatedSubnet"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "SmokeTestApp/Vpc/Vpc/IsolatedSubnetSubnet1"
          }
        ]
      }
    }
  },
  {
    "stackName": "SmokeTestApp",
    "format": "aws-cdk",
    "changeType": "CREATE",
    "resourceType": "AWS::EC2::RouteTable",
    "resourceRecord": {
      "address": "Vpc/Vpc/IsolatedSubnetSubnet1/RouteTable",
      "type": "AWS::EC2::RouteTable",
      "logicalId": "VpcIsolatedSubnetSubnet1RouteTableE8228AAB",
      "properties": {
        "VpcId": {
          "Ref": "VpcC3027511"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "SmokeTestApp/Vpc/Vpc/IsolatedSubnetSubnet1"
          }
        ]
      }
    }
  },
  {
    "stackName": "SmokeTestApp",
    "format": "aws-cdk",
    "changeType": "CREATE",
    "resourceType": "AWS::EC2::SubnetRouteTableAssociation",
    "resourceRecord": {
      "address": "Vpc/Vpc/IsolatedSubnetSubnet1/RouteTableAssociation",
      "type": "AWS::EC2::SubnetRouteTableAssociation",
      "logicalId": "VpcIsolatedSubnetSubnet1RouteTableAssociationB0977E01",
      "properties": {
        "RouteTableId": {
          "Ref": "VpcIsolatedSubnetSubnet1RouteTableE8228AAB"
        },
        "SubnetId": {
          "Ref": "VpcIsolatedSubnetSubnet1Subnet9413A915"
        }
      }
    }
  },
  {
    "stackName": "SmokeTestApp",
    "format": "aws-cdk",
    "changeType": "CREATE",
    "resourceType": "AWS::EC2::Subnet",
    "resourceRecord": {
      "address": "Vpc/Vpc/IsolatedSubnetSubnet2/Subnet",
      "type": "AWS::EC2::Subnet",
      "logicalId": "VpcIsolatedSubnetSubnet2Subnet68825D18",
      "properties": {
        "VpcId": {
          "Ref": "VpcC3027511"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.40.96.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "IsolatedSubnet"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "SmokeTestApp/Vpc/Vpc/IsolatedSubnetSubnet2"
          }
        ]
      }
    }
  },
  {
    "stackName": "SmokeTestApp",
    "format": "aws-cdk",
    "changeType": "CREATE",
    "resourceType": "AWS::EC2::RouteTable",
    "resourceRecord": {
      "address": "Vpc/Vpc/IsolatedSubnetSubnet2/RouteTable",
      "type": "AWS::EC2::RouteTable",
      "logicalId": "VpcIsolatedSubnetSubnet2RouteTable4C59DEE4",
      "properties": {
        "VpcId": {
          "Ref": "VpcC3027511"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "SmokeTestApp/Vpc/Vpc/IsolatedSubnetSubnet2"
          }
        ]
      }
    }
  },
  {
    "stackName": "SmokeTestApp",
    "format": "aws-cdk",
    "changeType": "CREATE",
    "resourceType": "AWS::EC2::SubnetRouteTableAssociation",
    "resourceRecord": {
      "address": "Vpc/Vpc/IsolatedSubnetSubnet2/RouteTableAssociation",
      "type": "AWS::EC2::SubnetRouteTableAssociation",
      "logicalId": "VpcIsolatedSubnetSubnet2RouteTableAssociationF1972EDB",
      "properties": {
        "RouteTableId": {
          "Ref": "VpcIsolatedSubnetSubnet2RouteTable4C59DEE4"
        },
        "SubnetId": {
          "Ref": "VpcIsolatedSubnetSubnet2Subnet68825D18"
        }
      }
    }
  },
  {
    "stackName": "SmokeTestApp",
    "format": "aws-cdk",
    "changeType": "CREATE",
    "resourceType": "AWS::EC2::InternetGateway",
    "resourceRecord": {
      "address": "Vpc/Vpc/IGW",
      "type": "AWS::EC2::InternetGateway",
      "logicalId": "VpcIGW488B0FEB",
      "properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "SmokeTestApp/Vpc/Vpc"
          }
        ]
      }
    }
  },
  {
    "stackName": "SmokeTestApp",
    "format": "aws-cdk",
    "changeType": "CREATE",
    "resourceType": "AWS::EC2::VPCGatewayAttachment",
    "resourceRecord": {
      "address": "Vpc/Vpc/VPCGW",
      "type": "AWS::EC2::VPCGatewayAttachment",
      "logicalId": "VpcVPCGW42EC8516",
      "properties": {
        "VpcId": {
          "Ref": "VpcC3027511"
        },
        "InternetGatewayId": {
          "Ref": "VpcIGW488B0FEB"
        }
      }
    }
  }
]
